2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (iosearch): New function.
	* testsuite/poke.pkl/iosearch-1.pk: New test.
	* testsuite/poke.pkl/iosearch-2.pk: Likewise.
	* testsuite/poke.pkl/iosearch-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (iosearch): New section.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/ios-2.pk: New test.
	* testsuite/poke.cmd/ios-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.c (pk_ios_init): New function.
	(pk_ios_shutdown): Likewise.
	(pk_ios_alien_token_handler): Likewise.
	* poke/poke.c (initialize): Call pk_ios_init.
	(finalize): Call pk_ios_shutdown.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Support $<...> alien tokens.
	* libpoke/libpoke.c (pk_set_alien_dtoken_fn): New function.
	* libpoke/pkl.c (struct pkl_compiler): New field alien_dtoken_fn.
	(pkl_alien_dtoken_fn): New function.
	(pkl_set_alien_dtoken_fn): Likewise.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Make sure the
	destination type of a cast to an array has a bounder.
	* libpoke/pkl-gen.c (pkl_gen_pr_type_array): Make sure the array
	type has a bounder in PKL_GEN_CTX_IN_TYPE context.
	* testsuite/poke.pkl/scons-72.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/pe.pk (PE_Name): //BASE64 is worse than I thought.
	* testsuite/poke.pickles/pe-test.pk: Update.

2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/Makefile.am (dist_pickles_DATA): Add base64.pk.

2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk (base64_decode): Simplify.

2023-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk (base64_decode): Quote characters are optional
	as per RFC.