@@ -1,3 +1,11 @@
+2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-promo.c (promote_array): Fix bounded array fast
+	path.
+	* testsuite/poke.pkl/promo-array-return-6.pk: New test.
+	* testsuite/poke.pkl/add-arrays-4.pk: Fix test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-rt.pk (iosearch): New function.
